--- a/src/css/container.css
+++ b/src/css/container.css
@@ -4,6 +4,7 @@
   max-width: 375px;
   margin: 0 auto;
   padding: 0 16px;
+  box-sizing: border-box
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
@@ -15,5 +16,6 @@
 @media only screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
+    padding: 24px;
   }
 }
