--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,9 +9,9 @@
 @import url('./base.css');
 @import url('./container.css');
 
-
 /* Sections style */
 @import url('./header.css');
-@import url('./badges.css');
 @import url('./back-link.css');
+@import url('./gallery.css');
+@import url('./form.css');
 
